Worked out an issues with z-index and positioning.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,17 +5,16 @@
 html {
   font-family: "Montserrat", sans-serif; }
 
+body {
+  overflow-x: hidden; }
+
 .nav-wrapper {
   width: 250px;
   height: 100vh;
   min-height: 350px;
   position: fixed;
   background: #fff;
-  border-right: 1px solid #202020;
-  -webkit-transform: translateX(-251px);
-  transform: translateX(-251px);
-  -webkit-transition: all 0.5s linear;
-  transition: all 0.5s linear; }
+  box-shadow: inset 0px 0px 10px #404040; }
 
 .nav-display {
   width: 100%;
@@ -33,16 +32,18 @@ html {
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
-  opacity: 0;
   -webkit-transform: translateX(-30px);
   transform: translateX(-30px);
   -webkit-transition: all 0.5s ease 0.3s;
   transition: all 0.5s ease 0.3s; }
+  .nav-display.active-nav {
+    -webkit-transform: translateX(0);
+    transform: translateX(0); }
   .nav-display h1 {
     position: absolute;
-    font-size: 100px;
-    left: 70px;
-    top: 60px; }
+    font-size: 120px;
+    left: 60px;
+    top: 50px; }
   .nav-display ul {
     list-style: none; }
   .nav-display li {
@@ -54,21 +55,55 @@ html {
       text-decoration: none;
       color: #202020; }
 
+.active-nav-icon {
+  right: 10px; }
+
+.intro-wrapper {
+  width: 100%;
+  height: 100vh;
+  background: #f9f9f9;
+  position: relative;
+  left: 250px;
+  -webkit-transform: translateX(-250px);
+  transform: translateX(-250px);
+  -webkit-transition: all 0.5s linear;
+  transition: all 0.5s linear; }
+  .intro-wrapper.active-wrapper {
+    -webkit-transform: translateX(0);
+    transform: translateX(0); }
+
+.intro-display {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  .intro-display h1 {
+    font-size: 50px; }
+
 .nav-icon {
   width: 32px;
   height: 30px;
   position: absolute;
   top: 15px;
-  right: -40px;
+  left: 10px;
   cursor: pointer;
-  z-index: 100;
-  -webkit-transition: all 0.5s linear;
-  transition: all 0.5s linear; }
+  z-index: 10; }
   .nav-icon span {
     width: 27px;
     height: 3px;
     background: #202020;
     position: absolute;
+    z-index: 1000;
     -webkit-transition: all 0.5s linear;
     transition: all 0.5s linear; }
     .nav-icon span:nth-child(1) {
@@ -106,28 +141,34 @@ html {
       -webkit-transform: rotate(-135deg);
       transform: rotate(-135deg); }
 
-.active-nav-icon {
-  right: 10px; }
-
-.active-nav {
-  opacity: 1;
-  -webkit-transform: translateX(0);
-  transform: translateX(0); }
-
-.intro-wrapper {
-  width: 100%;
-  height: 100vh;
-  background: #f9f9f9; }
-
-.intro-display {
-  width: 100%;
-  height: 100%; }
-
 .about-wrapper {
   width: 100%;
   height: 100vh;
-  min-height: 500px; }
+  min-height: 500px;
+  background: #ccc;
+  position: relative;
+  left: 250px;
+  z-index: 1;
+  -webkit-transform: translateX(-250px);
+  transform: translateX(-250px);
+  -webkit-transition: all 0.5s linear;
+  transition: all 0.5s linear; }
+  .about-wrapper.active-wrapper {
+    -webkit-transform: translateX(0);
+    transform: translateX(0); }
 
 .about-display {
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center; }
